--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           command: bundle exec rake test
 
 workflows:
-  versions: 2
+  version: 2
   build_and_test:
     jobs:
       - build
